<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cuisineproject.appli_cuisine_clien.ui.home.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.cuisineproject.appli_cuisine_clien.ui.favorite.FavoriteFragment"
        android:label="@string/favorite_title"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.cuisineproject.appli_cuisine_clien.ui.account.AccountFragment"
        android:label="@string/account_title"
        tools:layout="@layout/fragment_account" />
</navigation>