<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        style="@style/title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingVertical="20dp"
        android:text="@string/main_title"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp"
        android:text="@string/main_sub_title"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_email" />

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tv_error_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#EC0F0F" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/main_password" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tv_error_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#EC0F0F" />

    <Button
        android:id="@+id/bt_inscription"
        style="@style/AppTheme.RoundedButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/main_inscription_button"
        android:background="@drawable/rounded_button_background"
        app:strokeColor="#AA6704" />

    <TextView
        android:id="@+id/tv_general_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_connexion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button_background"
        android:fontFamily="@font/petit_formal_script"
        android:text="@string/main_connexion_button"
        android:textColor="@color/black"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:textSize="20sp"
        android:textAllCaps="false" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>