<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.favorite.FavoriteFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_favorite_title"
            style="@style/title_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/recipe_title" />

        <TextView
            android:id="@+id/tv_sub_title_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/favorite_sub_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recipes_like"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:itemCount="2"
                tools:listitem="@layout/row_recipe">

            </androidx.recyclerview.widget.RecyclerView>

            <ProgressBar
                android:id="@+id/progressBarFavorite"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_no_liked_recipes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_liked_recipe"
                tools:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>